k8s/services/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: loans
  name: notification-service
  labels:
    app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: osvasldas97/notification-service:1.0-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - name: service-port
              containerPort: 8082
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: service-port
            failureThreshold: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: service-port
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /actuator/health
              port: service-port
            failureThreshold: 30
            periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  namespace: loans
  name: notification-service
  labels:
    app: notification-service
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8082'
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-service-ingress
  namespace: loans
spec:
  ingressClassName: nginx
  rules:
    - host: notifications.osber.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8082
