k8s/services/risk-checker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: loans
  name: risk-checker
  labels:
    app: risk-checker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: risk-checker
  template:
    metadata:
      labels:
        app: risk-checker
    spec:
      containers:
        - name: risk-checker
          image: osvasldas97/risk-checker:1.0-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - name: service-port
              containerPort: 8081
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: service-port
            failureThreshold: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: service-port
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /actuator/health
              port: service-port
            failureThreshold: 30
            periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  namespace: loans
  name: risk-checker
  labels:
    app: risk-checker
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8081'
spec:
  selector:
    app: risk-checker
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: risk-checker-ingress
  namespace: loans
spec:
  ingressClassName: nginx
  rules:
    - host: risk.osber.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: risk-checker
                port:
                  number: 8081
